# freckle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
scripts/: bootstrap.sh  run_e2e_docker.sh
src/bootstrap/: __init__.py  base.py  cli.py  config.py  dotfiles.py  environment.py  nvim.py  packages.py  tmux.py  utils.py  zsh.py
src/bootstrap/managers/: nvim.py  tmux.py  zsh.py
src/freckle/: __init__.py  base.py  branch.py  cli.py  config.py  discovery.py  dotfiles.py  system.py  tools_registry.py  utils.py
src/freckle/cli/: __init__.py  backup.py  config.py  config_cmd.py  discover.py  doctor.py  fetch.py  files.py  git.py  helpers.py  history.py  init.py  profile.py  restore.py  save.py  schedule.py  status.py  sync.py  tools.py  update.py  upgrade.py  version.py
src/freckle/cli/profile/: __init__.py  create.py  delete.py  helpers.py  operations.py
src/freckle/dotfiles/: __init__.py  manager.py  operations.py  repo.py
src/freckle/managers/: __init__.py  base.py  git.py  nvim.py  tmux.py  zsh.py
tests/e2e/: Dockerfile  test_bootstrap_flow.py  test_cli_commands.py  test_error_conditions.py  test_freckle_flow.py
tests/integration/: test_cli_paths.py  test_dotfiles.py  test_packages.py  test_system.py
tests/unit/: test_backup.py  test_branch.py  test_config.py  test_config_extended.py  test_discovery.py  test_doctor.py  test_environment.py  test_git_history_service.py  test_history.py  test_manager.py  test_operations.py  test_profile.py  test_repo.py  test_restore.py  test_save.py  test_schedule.py  test_secrets.py  test_system.py  test_tools_registry.py  test_tools_registry_extended.py  test_utils.py
