[project]
name = "bootstrap"
version = "0.1.1"
description = "A robust, multi-platform system bootstrapper for Linux and macOS."
readme = "README.md"
authors = [
    { name = "Peter Prescott", email = "prescott.peter@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fire>=0.7.1",
    "pygit2>=1.15.0,<1.16.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
bootstrap = "bootstrap:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
