[project]
name = "freckle"
version = "0.1.1"
description = "Keep track of all your dot(file)s. A dotfiles manager with tool installation."
readme = "README.md"
authors = [
    { name = "Peter Prescott", email = "prescott.peter@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fire>=0.7.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
freckle = "freckle:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
